# QuotesDjangoApplication

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
django_core/authors/: forms.py  urls.py  views.py
django_core/authors/templates/authors/: authors.html  update.html
django_core/django_core/: settings.py  urls.py
django_core/mongo/: authors.json  migration.py  models.py
django_core/quotes/: forms.py  models.py  test.py  urls.py  utils.py  views.py
django_core/quotes/migrations/: 0001_initial.py
django_core/quotes/static/quotes/: style.css
django_core/quotes/templates/quotes/: base.html  index.html  tags.html  update.html
django_core/quotes/templatetags/: extract.py
django_core/users/: forms.py  models.py  urls.py  views.py
django_core/users/migrations/: 0001_initial.py
django_core/users/templates/users/: login.html  profile.html  signup.html
