[tool.poetry]
name = "simpledjangoapplication"
version = "0.1.0"
description = ""
authors = ["paulmusquaro <136118097+paulmusquaro@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
pymongo = "^4.7.0"
psycopg2 = "^2.9.9"
mongoengine = "^0.28.2"
django-environ = "^0.11.2"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
